# experiment

./: .gitignore  README.md
array/: array.c
cabocha/: Makefile  cabochad.c
cast/: main.c
cin/: Test.cc
composition/: Test.cc
devmem/: Makefile  main.c
echoclient/net/: main.c
env/: read_proxy.c
event/: main.cc
google_speech/: recog.sh  record.sh
hello/: hello.c
htonl/: main.c
inet_addr/: main.c
inheritance/: test.cc
input/: main.c
java/bytestream/: Test.java
java/length/: Test.java
kmem/: xm.c
lnz/: SConstruct  lnz.plt  lnz1.c  nlz.c  nlz.plt  nlz1.c  nlz2.c  nlz3.c  nlz4.c
mask/: mask.c
nlz/: SConstruct
not/: main.c
open/: test.c
pthread/: .depend  CommandServer.h  DataHandler.h  DataServer.h  LocalServerSocket.h  Log.h  Main.cc  Makefile  RecognitionEventHandler.h  RecognitionService.h  SocketServer.cc  SocketServer.h
qsort/: Makefile  qsort.c
rawsock/: main.c
rust_programming_language/ch1/hello_cargo/: Cargo.toml
rust_programming_language/ch2/guessing_game/: Cargo.toml
rust_programming_language/ch2/guessing_game/src/: main.rs
rust_programming_language/ch3/control_flow/: Cargo.toml
rust_programming_language/ch3/control_flow/src/: main.rs
serial/: main.c
singleton/: test.cc
stack/: main.c
stdstring/: main.cpp
strlen/: main.cpp
strtok/: main.c
tcp/: tcp_server.c
thread/: Makefile  Test.cc
unix/: CMakeLists.txt  Makefile  dgram_client.c  dgram_server.c  stream_client.c  stream_server.c  tcpd.cc  thread_server.c
unix_domain/: client.c  server.c
websocket/: Makefile  wsproxy.c
(+11 files in other folders)
